# supabase-customers

./: .env  pyproject.toml
app/: __init__.py
app/controllers/: customers_route.py
app/utils/: supabase_client.py
tests/: conftest.py  test_customers.py
